fixes search github results being off-center

--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,16 @@ body {
   min-width: 1100px; 
 }
 
+.search-container {
+  position: relative;
+}
+
 .search-results-container {
   position: absolute;
-  left: 558px;
+  left: 400px;
+  top: 37px;
   z-index: 1;
+  padding: 0;
 }
 
 .results-display-container {
